// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TransferLedgerReview > should render 1`] = `
<DocumentFragment>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionDetail"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        <div
          class="flex items-center space-x-2"
          data-testid="LedgerReview__expiration"
        >
          <span>
            Expiration
          </span>
          <div
            class="questionmark flex h-5 w-5 cursor-pointer items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
          >
            <div
              class="css-15txs7d"
              height="10"
              width="10"
            >
              <svg
                id="question-mark-small"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M5 9h0M3.2 2.8C3.2 1.9 3.9 1 5 1s1.8.8 1.8 1.8c0 .8-.4 1.5-1.3 1.7-.3.2-.5.5-.5.8v.9"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center font-semibold"
      >
        123
      </div>
    </div>
  </div>
  <div
    class="mt-2"
  >
    <div
      class="rounded-lg border border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <div
        class="relative p-4"
      >
        <div
          class="flex flex-col divide-y divide-theme-secondary-300 dark:divide-theme-secondary-800 sm:flex-row sm:divide-x sm:divide-y-0"
        >
          <div
            class="mb-4 flex flex-col justify-center px-4 py-2 text-center sm:mb-0 sm:w-1/2 sm:text-left"
          >
            <span
              class="css-1orx95h"
            >
              Transaction Amount
            </span>
            <span
              class="whitespace-nowrap text-md mt-1 font-semibold"
              data-testid="Amount"
            >
              0 DARK
            </span>
          </div>
          <div
            class="flex flex-col justify-center p-2 px-4 pt-6 text-center sm:w-1/2 sm:pt-2 sm:text-right"
          >
            <span
              class="css-1orx95h"
            >
              Transaction Fee
            </span>
            <span
              class="whitespace-nowrap text-md mt-1 font-semibold"
              data-testid="Amount"
            >
              0 DARK
            </span>
          </div>
        </div>
        <div
          class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 transform"
        >
          <div
            class="ml-px bg-theme-background p-2 text-theme-secondary-900 dark:text-theme-secondary-600"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg
                id="plus"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M1 10h18M10 1v18"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="justfiy-center flex flex-col items-center rounded-b-lg border-t border-theme-secondary-300 bg-theme-secondary-100 py-6 dark:border-theme-secondary-800 dark:bg-theme-secondary-800"
      >
        <span
          class="css-1orx95h"
        >
          Total Amount
        </span>
        <span
          class="whitespace-nowrap text-md font-bold sm:text-lg"
          data-testid="Amount"
        >
          0 DARK
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TransferLedgerReview > should render skeleton while loading expiration 1`] = `
<DocumentFragment>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionDetail"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        <div
          class="flex items-center space-x-2"
          data-testid="LedgerReview__expiration"
        >
          <span>
            Expiration
          </span>
          <div
            class="questionmark flex h-5 w-5 cursor-pointer items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
          >
            <div
              class="css-15txs7d"
              height="10"
              width="10"
            >
              <svg
                id="question-mark-small"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M5 9h0M3.2 2.8C3.2 1.9 3.9 1 5 1s1.8.8 1.8 1.8c0 .8-.4 1.5-1.3 1.7-.3.2-.5.5-.5.8v.9"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <span
          class="my-0.5 flex"
          data-testid="TransferLedgerReview__expiration-skeleton"
        >
          <span
            aria-busy="true"
            aria-live="polite"
            class="flex w-auto max-w-full items-center overflow-hidden leading-none"
          >
            <span
              class="react-loading-skeleton"
              style="width: 80px; height: 16px;"
            >
              ‌
            </span>
            <br />
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="mt-2"
  >
    <div
      class="rounded-lg border border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <div
        class="relative p-4"
      >
        <div
          class="flex flex-col divide-y divide-theme-secondary-300 dark:divide-theme-secondary-800 sm:flex-row sm:divide-x sm:divide-y-0"
        >
          <div
            class="mb-4 flex flex-col justify-center px-4 py-2 text-center sm:mb-0 sm:w-1/2 sm:text-left"
          >
            <span
              class="css-1orx95h"
            >
              Transaction Amount
            </span>
            <span
              class="whitespace-nowrap text-md mt-1 font-semibold"
              data-testid="Amount"
            >
              0 DARK
            </span>
          </div>
          <div
            class="flex flex-col justify-center p-2 px-4 pt-6 text-center sm:w-1/2 sm:pt-2 sm:text-right"
          >
            <span
              class="css-1orx95h"
            >
              Transaction Fee
            </span>
            <span
              class="whitespace-nowrap text-md mt-1 font-semibold"
              data-testid="Amount"
            >
              0 DARK
            </span>
          </div>
        </div>
        <div
          class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 transform"
        >
          <div
            class="ml-px bg-theme-background p-2 text-theme-secondary-900 dark:text-theme-secondary-600"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg
                id="plus"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M1 10h18M10 1v18"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="justfiy-center flex flex-col items-center rounded-b-lg border-t border-theme-secondary-300 bg-theme-secondary-100 py-6 dark:border-theme-secondary-800 dark:bg-theme-secondary-800"
      >
        <span
          class="css-1orx95h"
        >
          Total Amount
        </span>
        <span
          class="whitespace-nowrap text-md font-bold sm:text-lg"
          data-testid="Amount"
        >
          0 DARK
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TransferLedgerReview > should render with memo 1`] = `
<DocumentFragment>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionMemo"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Memo
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <p
          class="whitespace-pre-line break-all"
        >
          test
        </p>
      </div>
    </div>
    <div
      class="flex justify-center text-theme-secondary-900 dark:text-theme-secondary-600 md:px-3"
    >
      <div
        class="css-1i4b0eq"
        height="20"
        width="20"
      >
        <svg
          id="file-lines"
          viewBox="0 0 20 20"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          >
            <path
              d="M7 14h3.5M7 11h6M7 8h6M3 17.4c0 .9.667 1.6 1.429 1.6h-.096 11.143c.857 0 1.524-.8 1.524-1.6V2.6c0-.9-.762-1.6-1.524-1.6h0-7.905c-.38 0-.761.1-1.142.4L3.38 4.6C3 5 3 5.4 3 5.8v11.6z"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionDetail"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        <div
          class="flex items-center space-x-2"
          data-testid="LedgerReview__expiration"
        >
          <span>
            Expiration
          </span>
          <div
            class="questionmark flex h-5 w-5 cursor-pointer items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
          >
            <div
              class="css-15txs7d"
              height="10"
              width="10"
            >
              <svg
                id="question-mark-small"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M5 9h0M3.2 2.8C3.2 1.9 3.9 1 5 1s1.8.8 1.8 1.8c0 .8-.4 1.5-1.3 1.7-.3.2-.5.5-.5.8v.9"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center font-semibold"
      >
        123
      </div>
    </div>
  </div>
  <div
    class="mt-2"
  >
    <div
      class="rounded-lg border border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <div
        class="relative p-4"
      >
        <div
          class="flex flex-col divide-y divide-theme-secondary-300 dark:divide-theme-secondary-800 sm:flex-row sm:divide-x sm:divide-y-0"
        >
          <div
            class="mb-4 flex flex-col justify-center px-4 py-2 text-center sm:mb-0 sm:w-1/2 sm:text-left"
          >
            <span
              class="css-1orx95h"
            >
              Transaction Amount
            </span>
            <span
              class="whitespace-nowrap text-md mt-1 font-semibold"
              data-testid="Amount"
            >
              0 DARK
            </span>
          </div>
          <div
            class="flex flex-col justify-center p-2 px-4 pt-6 text-center sm:w-1/2 sm:pt-2 sm:text-right"
          >
            <span
              class="css-1orx95h"
            >
              Transaction Fee
            </span>
            <span
              class="whitespace-nowrap text-md mt-1 font-semibold"
              data-testid="Amount"
            >
              0 DARK
            </span>
          </div>
        </div>
        <div
          class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 transform"
        >
          <div
            class="ml-px bg-theme-background p-2 text-theme-secondary-900 dark:text-theme-secondary-600"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg
                id="plus"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M1 10h18M10 1v18"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="justfiy-center flex flex-col items-center rounded-b-lg border-t border-theme-secondary-300 bg-theme-secondary-100 py-6 dark:border-theme-secondary-800 dark:bg-theme-secondary-800"
      >
        <span
          class="css-1orx95h"
        >
          Total Amount
        </span>
        <span
          class="whitespace-nowrap text-md font-bold sm:text-lg"
          data-testid="Amount"
        >
          0 DARK
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
